# demo-prefect

./: LICENSE.txt  README.md  prefect.yaml  pyproject.toml  requirements.txt
src/python_orchestration_demo/: __about__.py  __init__.py  flows.py  tasks.py
