[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-orchestration-demo"
dynamic = ["version"]
description = 'A sample orchestration process for LENA Interview'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [{ name = "neil riego", email = "neilchristianriego3@gmail.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["prefect"]

[project.urls]
Documentation = "https://github.com/unknown/python-orchestration-demo#readme"
Issues = "https://github.com/unknown/python-orchestration-demo/issues"
Source = "https://github.com/unknown/python-orchestration-demo"

[tool.hatch.version]
path = "src/python_orchestration_demo/__about__.py"

[tool.hatch.envs.default]
dependencies = ["coverage[toml]>=6.5", "pytest"]
[tool.hatch.envs.default.scripts]
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = ["- coverage combine", "coverage report"]
cov = ["test-cov", "cov-report"]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = ["mypy>=1.0.0"]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/python_orchestration_demo tests}"

[tool.coverage.run]
source_pkgs = ["python_orchestration_demo", "tests"]
branch = true
parallel = true
omit = ["src/python_orchestration_demo/__about__.py"]

[tool.coverage.paths]
python_orchestration_demo = [
  "src/python_orchestration_demo",
  "*/python-orchestration-demo/src/python_orchestration_demo",
]
tests = ["tests", "*/python-orchestration-demo/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
